# Python-Redlines

./: .gitignore  .gitmodules  404.html  CLAUDE.md  README.md  action.yml  build_differ.py  extract_version.py  hatch_run_build_hook.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-engines.yml  ci.yml  docs.yml  python-publish.yml  redline-action-test.yml
action/: redline_changed.py
alternatives/: index.html
csproj/: Program.cs  redlines.csproj  redlines.sln
csproj-clippit/: Program.cs  clippit-redline.csproj  clippit.csproj
csproj-docxodus/: Program.cs  redline.csproj
developer-guide/: index.html
docs/: alternatives.md  developer-guide.md  index.md  quickstart.md
docs/tutorials/: how-to-compare-word-documents-python.md
quickstart/: index.html
search/: search_index.json
src/python_redlines/: __about__.py  __init__.py  base.py  engines.py  registry.py
tests/: test_action_script.py  test_base.py  test_clippit_engine.py  test_docxodus_engine.py  test_engine_contract.py  test_engines.py  test_openxml_differ.py  test_package.py  test_registry.py
tests/fixtures/: expected_redline.docx  modified.docx  original.docx
tutorials/how-to-compare-word-documents-python/: index.html
