[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-redlines"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "hatch",
  "hatchling"
]

[project.urls]
Documentation = "https://github.com/unknown/python-redlines#readme"
Issues = "https://github.com/unknown/python-redlines/issues"
Source = "https://github.com/unknown/python-redlines"

[tool.hatch.version]
path = "src/python_redlines/__about__.py"

[tool.hatchling.build]
packages = [
    {include = "src/python_redlines"},
    {include = "src/python_redlines/dist/*"},
   {include = "src/python_redlines/bin/*"}
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
build = "python -m build_differ"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/python_redlines tests}"

[tool.coverage.run]
source_pkgs = ["python_redlines", "tests"]
branch = true
parallel = true
omit = [
  "src/python_redlines/__about__.py",
]

[tool.coverage.paths]
python_redlines = ["src/python_redlines", "*/python-redlines/src/python_redlines"]
tests = ["tests", "*/python-redlines/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
