[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"dist" = "python_redlines/dist"

[tool.hatch.build.targets.wheel]
artifacts = [
  "*.zip",
  "*.tar.gz",
]
[tool.hatch.build.targets.sdist]
include = [
  "python_redlines/dist",
  "python_redlines/bin",
]

# Build hook to build the binaries for distribution...
[tool.hatch.build.hooks.custom]
path = "hatch_run_build_hook.py"

[project]
name = "python-redlines"
dynamic = ["version"]
description = 'A pluggable document comparison library for generating redlined Word documents with tracked changes'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["docx", "word", "redline", "comparison", "tracked-changes", "diff"]
authors = [
  { name = "John Scrudato IV" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Office/Business :: Office Suites",
  "Topic :: Text Processing :: Markup",
]
dependencies = []

[project.optional-dependencies]
# For development/building
dev = [
  "hatch",
  "hatchling",
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-cov",
]

[project.urls]
Documentation = "https://github.com/JSv4/Python-Redlines#readme"
Issues = "https://github.com/JSv4/Python-Redlines/issues"
Source = "https://github.com/JSv4/Python-Redlines"

[tool.hatch.version]
path = "src/python_redlines/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
build-engines = "python -m build_differ"
build-openxml = "python -m build_differ --engine openxml-powertools"
build-docxodus = "python -m build_differ --engine docxodus"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/python_redlines tests}"

[tool.coverage.run]
source_pkgs = ["python_redlines", "tests"]
branch = true
parallel = true
omit = [
  "src/python_redlines/__about__.py",
]

[tool.coverage.paths]
python_redlines = ["src/python_redlines", "*/python-redlines/src/python_redlines"]
tests = ["tests", "*/python-redlines/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
